# libdxf2mat

./: .gitignore  CMakeLists.txt  README.md
3rd/: CMakeLists.txt
3rd/dxflib/: CMakeLists.txt  dl_dxf.cpp  dl_entities.h
3rd/tinyspline/: CMakeLists.txt  tinysplinecpp.h
include/: libdxf2mat.h
src/: CMakeLists.txt  libdxf2mat.cpp
test/: CMakeLists.txt  test0.cpp
